# sistema-recomendador-juegos-steam

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  sistema_recomendacion_content_based.ipynb  sistema_recomendacion_v2.ipynb
artifacts/: catalogo.parquet  indice_por_genero.pkl  matriz_tfidf.npz  popularidad.parquet  vectorizer.pkl
deploy/: .dockerignore  README.md  deploy_to_hf.sh
frontend/: explorar.html  index.html  juego.html  nuevo-usuario.html  presentacion.html  usuario.html
frontend/js/: api.js  components.js  explorar.js  index.js  juego.js  nuevo-usuario.js  presentacion.js  usuario.js
src/utils/: calculo_similitud.py  cold_start.py  estratificacion.py  filtros.py  limpieza.py  motor_v2.py  perfil_usuario.py  preparacion_metadata.py  solapamiento.py
